tests/miz/pass/parser/pass_parser_consider_reconsider_001.miz
consider x, y being set such that A: thesis and contradiction by A;
consider z being set, w being set such that thesis by B;
reconsider x, y = z as set by A;
