tests/miz/fail/types/fail_type_elaboration_proof_local_declaration_gap_001.miz
theorem ProofLocalDeclarationPayloadBoundary: thesis proof
  let x be set;
  given y being set such that G: thesis;
  A: thesis proof
    thus thesis;
  end;
  consider z being set such that C: thesis by A;
  set w = z;
  reconsider v = w as set by A;
  thus thesis by A;
end;
